<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_gambar"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_gambar"
            android:layout_toRightOf="@id/img_gambar"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/namaclub" />

        <TextView
            android:id="@+id/tv_item_jlk"
            android:layout_width="195dp"
            android:layout_height="30dp"
            android:layout_below="@id/tv_item_name"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_gambar"
            android:layout_toRightOf="@id/img_gambar"
            android:ellipsize="end"
            android:maxLines="5"
            android:textStyle="italic"
            tools:text="@string/julukan" />

        <TextView
            android:id="@+id/tv_item_year"
            android:layout_width="195dp"
            android:layout_height="30dp"
            android:layout_below="@id/tv_item_name"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_gambar"
            android:layout_toRightOf="@id/img_gambar"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/Tahun" />

        <TextView
            android:id="@+id/tv_item_homebase"
            android:layout_width="195dp"
            android:layout_height="60dp"
            android:layout_below="@id/tv_item_name"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_gambar"
            android:layout_toRightOf="@id/img_gambar"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/homebase" />

        <TextView
            android:id="@+id/tv_item_sup"
            android:layout_width="195dp"
            android:layout_height="60dp"
            android:layout_below="@id/tv_item_name"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="95dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_gambar"
            android:layout_toRightOf="@id/img_gambar"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/penonton" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>